# commutator

./: .gitignore
flasher/: build.sh  flash.sh
flasher/Src/: CMakeLists.txt  bootloader.c  bootloader.h  bootloader_def.h  bootloader_opt.h  common.c  common.h  flasher.c  fsm.c  gpio.c  stm32.h  uart.c  uart.h  ver.h.in
stm/: commutator_hal.ioc  copy fw.cmd
stm/Core/Inc/: defs.h  stm32l0xx_it.h  usart.h
stm/Core/Src/: connections.c  gpio.c  main.c  stm32l0xx_it.c  usart.c
system/boot/: cmdline.txt  cmdline.txt.bck  config.txt  config.txt.bck
system/ctrl/: control.sh  trace.sh
system/init_gpio/: init_gpio.c  init_gpio.h  readme.md
